--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/foundation.css">
     <link rel="stylesheet" href="css/app.css">
     <!-- Google Fonts link -->
-    <link href="https://fonts.googleapis.com/css?family=Monofett|Bungee+Shade|Open+Sans|Open+Sans+Condensed:300|Ranchers|Pacifico|Architects+Daughter|Nova+Mono|Comfortaa|Lobster|Fascinate+Inline|Gloria+Hallelujah|Space+Mono|Jura|Kaushan+Script|Passion+One|Satisfy|Syncopate:400,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Monofett|Bungee+Shade|Open+Sans|Open+Sans+Condensed:300|Audiowide|Ranchers|Pacifico|Architects+Daughter|Nova+Mono|Comfortaa|Lobster|Fascinate+Inline|Gloria+Hallelujah|Space+Mono|Jura|Kaushan+Script|Passion+One|Satisfy|Syncopate:400,700" rel="stylesheet">
 </head>
 
 <body>
@@ -72,16 +72,18 @@
   <span class="image-hover-wrapper-banner">Old Junky Bikes</span>
   <a href="#"><img src="css/images/bucky.png">
     <span class="image-hover-wrapper-reveal">
-      <p>Check it<br><i class="fa fa-link" aria-hidden="true"></i></p>
+      <p class="visitLink">Visit <i class="fa fa-share" aria-hidden="true"></i><br><span style="font-family: 'Pacifico', cursive; font-size: 40px; color: #ff5733;">Buy</span><span style="color:black">or</span><span style="font-family: 'Audiowide', cursive; font-size: 36px; color:black">Buck</span> 
+  
+      </p>
     </span>
   </a>
 </div>
 
             <div class="image-hover-wrapper small-11 columns panel" data-equalizer-watch>
   <span class="image-hover-wrapper-banner">Old Junky Bikes</span>
-  <a href="#"><img src="css/images/HowYouDoing.png">
+  <a target="_blank" href="https://cjjordan.github.io/How-You-Doing/"><img src="css/images/HowYouDoing.png">
     <span class="image-hover-wrapper-reveal">
-      <p>Check it<br><i class="fa fa-link" aria-hidden="true"></i></p>
+      <p>Visit <i class="fa fa-share" aria-hidden="true"></i><br><br><span style="font-family:'Lobster', cursive; font-size: 40px; color:#FF4136">How <span style="color:grey">You</span> Doin&rsquo;?</span><br></p>
     </span>
   </a>
 </div>
@@ -91,7 +93,7 @@
 Used:  HTML, CSS, Foundation, Firebase, Bootstrap, JSX, React, JavaScript </span>
   <a href="#"><img src="css/images/GotThis.png">
     <span class="image-hover-wrapper-reveal">
-      <p>Check it<br><i class="fa fa-link" aria-hidden="true"></i></p>
+      <p>Visit <i class="fa fa-share" aria-hidden="true"></i><br><br><span style="font-size:30px ; font-family: 'Bungee Shade', cursive; font-weight:bold">You Got This</span></p>
     </span>
   </a>
 
