--- a/index.html
+++ b/index.html
@@ -68,9 +68,23 @@
  <div class="row bgimg" data-equalizer data-equalizer-mq="large-up">
         <div id="pencilTarget" class="page-scroll">
 <br><br><br>
+                <h2><span style="font-family: 'Pacifico', cursive; font-size:70px;">development + </span><br><span style="font-family:'Monofett', cursive; font-size:100px; text-align:right">d e s i g n </span></h2>
+<br><br><br>
             <div class="image-hover-wrapper small-11 columns panel" data-equalizer-watch>
-  <span class="image-hover-wrapper-banner">Old Junky Bikes</span>
-  <a href="#"><img src="css/images/bucky.png">
+  <span class="image-hover-wrapper-banner"><span style="font-family: 'Pacifico', cursive; font-size: 40px; color: floralwhite;">Buy</span><span style="color:black">or</span><span style="font-family: 'Audiowide', cursive; font-size: 36px; color:black">Buck</span>
+<br><br>
+<span class="bold">APP</span><br>
+Gives designers feedback through users’ opinions
+<br><br>
+<span class="bold">ROLE </span> 
+<br>
+Designer 
+<br><br>
+<span class="bold">TOOLS</span><br>  HTML, CSS, Google Font, Font Awesome, Foundation 
+
+
+</span>
+  <a target="_blank" href="http://vast-bastion-21748.herokuapp.com/"><img src="css/images/bucky.png">
     <span class="image-hover-wrapper-reveal">
       <p class="visitLink">Visit <i class="fa fa-share" aria-hidden="true"></i><br><span style="font-family: 'Pacifico', cursive; font-size: 40px; color: #ff5733;">Buy</span><span style="color:black">or</span><span style="font-family: 'Audiowide', cursive; font-size: 36px; color:black">Buck</span> 
   
@@ -78,22 +92,41 @@
     </span>
   </a>
 </div>
-
+<br><br><br>
             <div class="image-hover-wrapper small-11 columns panel" data-equalizer-watch>
-  <span class="image-hover-wrapper-banner">Old Junky Bikes</span>
+  <span class="image-hover-wrapper-banner"><span style="font-family:'Lobster', cursive; font-size: 37px; line-height: .2em ;color:white">How <span style="color:#FF4136">You</span> Doin&rsquo;?</span>
+<br><br>
+<span class="bold">APP</span><br>
+Tracks how teens feel daily through selfies and text analysis
+<br><br>
+<span class="bold">ROLE </span> 
+<br>
+Designer 
+<br><br>
+<span class="bold">TOOLS</span><br>HTML, CSS, Foundation, animation, JavaScript 
+
+
+</span>
   <a target="_blank" href="https://cjjordan.github.io/How-You-Doing/"><img src="css/images/HowYouDoing.png">
     <span class="image-hover-wrapper-reveal">
-      <p>Visit <i class="fa fa-share" aria-hidden="true"></i><br><br><span style="font-family:'Lobster', cursive; font-size: 40px; color:#FF4136">How <span style="color:grey">You</span> Doin&rsquo;?</span><br></p>
+      <p>Visit <i class="fa fa-share" aria-hidden="true"></i><br><span style="font-family:'Lobster', cursive; font-size: 45px; color:#FF4136">How <span style="color:grey">You</span> Doin&rsquo;?</span><br></p>
     </span>
   </a>
 </div>
-
+<br><br><br>
             <div class="image-hover-wrapper small-11 columns panel end" data-equalizer-watch>
-  <span class="image-hover-wrapper-banner"><span style="font-size:30px ; font-family: 'Bungee Shade', cursive;">You Got This</span><br><br>Helps girls who are hopeless take the next step through stories<br><br>
-Used:  HTML, CSS, Foundation, Firebase, Bootstrap, JSX, React, JavaScript </span>
-  <a href="#"><img src="css/images/GotThis.png">
+  <span class="image-hover-wrapper-banner"><span style="font-size:30px ; font-family: 'Bungee Shade', cursive;">You Got This</span>
+  <br><br>
+  <span class="bold">APP</span><br>
+  Helps girls who are hopeless take the next step through stories<br><br>
+  <span class="bold">ROLE </span> 
+<br>
+Designer, Developer
+<br><br>
+<span class="bold">TOOLS</span><br> HTML, CSS, Foundation, Firebase, Bootstrap, JSX, React, JavaScript </span>
+  <a target="_blank" href="http://invulnerable-madame-10087.herokuapp.com"><img src="css/images/GotThis.png">
     <span class="image-hover-wrapper-reveal">
-      <p>Visit <i class="fa fa-share" aria-hidden="true"></i><br><br><span style="font-size:30px ; font-family: 'Bungee Shade', cursive; font-weight:bold">You Got This</span></p>
+      <p>Visit <i class="fa fa-share" aria-hidden="true"></i><br><span style="font-size:34px ; font-family: 'Bungee Shade', cursive; font-weight:bold; color:#444">You Got This</span></p>
     </span>
   </a>
 
