--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                 <div id="pencilTarget" class="page-scroll">
                
                     
-                    <h2><span style="font-family: 'Pacifico', cursive; font-size:70px;">development + </span><br><span style="font-family:'Monofett', cursive; font-size:100px; text-align:right">d e s i g n </span></h2>
+                    <h2><span class="devHed">development + </span><br><span class="designHed">d e s i g n </span></h2>
                     <br>
                     <br>
                     <br>
