i cut grey boxes on portfolio

--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
                             <br>
                             <br>
 
-                            <span class="boldRezHed">Armstrong State University</span> &nbsp;&nbsp;<i class="fa fa-graduation-cap" aria-hidden="true"></i><span style="font-size:14px"> Dec. '06</span>
+                            <span class="boldRezHed">Armstrong State University</span> &nbsp;&nbsp;
            
-                            <br>
+                            <br><i class="fa fa-graduation-cap" aria-hidden="true"></i><span style="font-size:14px"> Dec. '06</span>
                             <span class="rezSubHed">B.A. English Communications</span>
                             <br>         
                             <ul>
@@ -204,7 +204,7 @@
                     <br>
            
             <!-- END RESUME -->
-
+<!-- DEV + Design portfolio -->
             <!--  row start for pics caro -->
             <div class="row bgimg" data-equalizer data-equalizer-mq="large-up">
                 <div id="pencilTarget" class="page-scroll">
@@ -217,22 +217,22 @@
 
                     <!-- START BUY OR BUCK SAMPLE -->
                     <div id="buck" class="image-hover-wrapper small-11 columns panel" data-equalizer-watch>
-                        <span class="image-hover-wrapper-banner page-scroll"><span style="font-family: 'Pacifico', cursive; font-size: 40px; color: floralwhite;">Buy</span><span style="color:black">&nbsp;or</span><br><span style="font-family: 'Audiowide', cursive; font-size: 36px; color:black">Buck</span>
+                        <span class="image-hover-wrapper-banner page-scroll"><span class="hideDescribe"><span style="font-family: 'Pacifico', cursive; font-size: 40px; color: floralwhite;">Buy</span><span style="color:black">&nbsp;or</span><br><span style="font-family: 'Audiowide', cursive; font-size: 36px; color:black">Buck</span> 
                         <br>
                         <br>
-                        <span class="bold">APP</span>
-                        <br> Gives designers feedback through users’ opinions
+                        <span class="bold">APP</span></span>
+                        <br> <span class="smText">Gives designers feedback through users’ opinions
                         <br>
                         <br>
                         <span class="bold">ROLE </span>
-                        <br> Designer
+                        <br> Designer</span><span class="hideDescribe">
                         <br>
                         <br>
-                        <span class="bold">TOOLS</span>
-                        <br> HTML, CSS, Google Font, Font Awesome, Foundation, responsive design
+                        <span class="bold ">TOOLS</span>
+                        <br> HTML, CSS, Google Font, Font Awesome, Foundation, responsive design</span>
 
                         </span>
-                        <a target="_blank" href="http://vast-bastion-21748.herokuapp.com/"><img src="css/images/bucky.png">
+                        <a target="_blank" href="http://vast-bastion-21748.herokuapp.com/"><img class="webImage" src="css/images/bucky.png">
                             <span class="image-hover-wrapper-reveal">
       <p class="visitLink">Visit <i class="fa fa-share" aria-hidden="true"></i><br><span style="font-family: 'Pacifico', cursive; font-size: 40px; color: #ff5733;">Buy</span><span style="color:black">or</span><span style="font-family: 'Audiowide', cursive; font-size: 36px; color:black">Buck</span>
 
