--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
                         </span>
                         <a target="_blank" href="http://vast-bastion-21748.herokuapp.com/"><img class="webImage" src="css/images/bucky.png">
                             <span class="image-hover-wrapper-reveal">
-      <p class="visitLink">Visit <i class="fa fa-share" aria-hidden="true"></i><br><span style="font-family: 'Pacifico', cursive; font-size: 40px; color: #ff5733;">Buy</span><span style="color:black">or</span><span style="font-family: 'Audiowide', cursive; font-size: 36px; color:black">Buck</span>
+      <p class="visitLink">Visit <i class="fa fa-share" aria-hidden="true"></i><br><span class="hideDescribe"><span style="font-family: 'Pacifico', cursive; font-size: 40px; color: #ff5733;">Buy</span><span style="color:black">or</span><span style="font-family: 'Audiowide', cursive; font-size: 36px; color:black">Buck</span></span>
 
                             </p>
                             </span>
@@ -254,7 +254,7 @@
 
                     <!-- START HOW YOU DOIN'? SAMPLE-->
                     <div id="doin" class="image-hover-wrapper small-11 columns panel" data-equalizer-watch>
-                        <span  class="image-hover-wrapper-banner page-scroll"><span style="font-family:'Lobster', cursive; font-size: 37px; line-height: .2em ;color:white">How <span style="color:#FF4136">You</span> Doin&rsquo;?</span>
+                        <span  class="image-hover-wrapper-banner page-scroll"><span class="hideDescribe"><span style="font-family:'Lobster', cursive; font-size: 37px; line-height: .2em ;color:white">How <span style="color:#FF4136">You</span> Doin&rsquo;?</span></span>
                         <br>
                         <br>
                         <span class="bold">APP</span>
@@ -271,7 +271,7 @@
                         </span>
                         <a target="_blank" href="https://cjjordan.github.io/How-You-Doing/"><img src="css/images/HowYouDoing.png">
                             <span class="image-hover-wrapper-reveal">
-      <p>Visit <i class="fa fa-share" aria-hidden="true"></i><br><span style="font-family:'Lobster', cursive; font-size: 45px; color:#FF4136">How <span style="color:grey">You</span> Doin&rsquo;?</span>
+      <p>Visit <i class="fa fa-share" aria-hidden="true"></i><br><span class="hideDescribe"><span style="font-family:'Lobster', cursive; font-size: 45px; color:#FF4136">How <span style="color:grey">You</span> Doin&rsquo;?</span></span>
                             <br>
                             </p>
                             </span>
@@ -291,7 +291,7 @@
 
                     <!-- START YOU GOT THIS SAMPLE-->
                     <div id="got" class="image-hover-wrapper small-11 columns panel end page-scroll" data-equalizer-watch>
-                        <span  class="image-hover-wrapper-banner "><span style="font-size:30px ; font-family: 'Bungee Shade', cursive;">You Got This</span>
+                        <span  class="image-hover-wrapper-banner "> <span  style="font-size:30px ; font-family: 'Bungee Shade', cursive;">You Got This</span> 
                         <br>
                         <br>
                         <span class="bold">APP</span>
@@ -306,7 +306,7 @@
                         <br> HTML, CSS, Foundation, Firebase, Bootstrap, JSX, React, JavaScript </span>
                         <a target="_blank" href="http://invulnerable-madame-10087.herokuapp.com"><img src="css/images/GotThis.png">
                             <span class="image-hover-wrapper-reveal">
-      <p>Visit <i class="fa fa-share" aria-hidden="true"></i><br><span style="font-size:34px ; font-family: 'Bungee Shade', cursive; font-weight:bold; color:#444">You Got This</span></p>
+      <p>Visit <i class="fa fa-share" aria-hidden="true"></i><br><span class="hideDescribe" style="font-size:34px ; font-family: 'Bungee Shade', cursive; font-weight:bold; color:#444">You Got This</span></p>
                             </span>
                         </a>
 
