adjust resume/app

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <br>
                 <br>
                 <div class="large-4 columns page-scroll">
-                    <a href="#selfieTarget"><i id="cameraFeel" class="fa fa-id-card fa-4x"></i><div id="textCamera">&nbsp;&nbsp;&nbsp;&nbsp;Resume&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</div></a>
+                    <a href="#selfieTarget"><i id="cameraFeel" class="fa fa-id-card fa-4x"></i><div id="textCamera">&nbsp;&nbsp;Resume&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</div></a>
 
                 </div>
 
@@ -76,16 +76,16 @@
                             <!-- EDUCATION section -->
                             <h3 class="portfolio-resume-header">EDUCATION</h3>
                             <span class="boldRezHed">Ga. Tech Professional Edu.</span> &nbsp;&nbsp;&nbsp;
-                                           <br>
+                                           <br><i class="fa fa-graduation-cap" aria-hidden="true"></i><span style="font-size:14px"> July '17</span>           <br>
                             <span class="rezSubHed">Full Stack Web Development Bootcamp</span>
-                            <br><i class="fa fa-graduation-cap" aria-hidden="true"></i><span style="font-size:14px"> July '17</span>           <br>
+                            <br>
                             <span class="rezDetails">Intensive, 24-week bootcamp to understand, design and build web applications</span>
                             <br>
                             <br>
 
                             <span class="boldRezHed">Armstrong State University</span> &nbsp;&nbsp;
            
-                            <br><i class="fa fa-graduation-cap" aria-hidden="true"></i><span style="font-size:14px"> Dec. '06</span>
+                            <br><i class="fa fa-graduation-cap" aria-hidden="true"></i><span style="font-size:14px"> Dec. '06</span><br>
                             <span class="rezSubHed">B.A. English Communications</span>
                             <br>         
                             <ul>
