revert to old icons

--- a/index.html
+++ b/index.html
@@ -28,34 +28,34 @@
             <!-- END callout -->
 
             <!-- START icon row -->
-            <!-- <div class="row"> -->
+             <div class="row"> 
               
-                <!-- <div class="large-4 columns page-scroll"> -->
-                    <!-- <a href="#selfieTarget"><i id="cameraFeel" class="fa fa-id-card fa-4x"></i><div id="textCamera">&nbsp;&nbsp;Resume&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</div></a> -->
+                 <div class="large-4 columns page-scroll"> 
+                     <a href="#selfieTarget"><i id="cameraFeel" class="fa fa-id-card fa-4x"></i><div id="textCamera">&nbsp;&nbsp;Resume&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</div></a> 
 
-                <!-- </div> -->
+                 </div> 
 
-                <!-- <div class="large-4 columns page-scroll end"> -->
-                    <!-- <a href="#pencilTarget"><i id="pencilFeel" class="fa fa-paint-brush fa-4x" aria-hidden="true"></i><div id="textPencil">Applications</div></a> -->
+                 <div class="large-4 columns page-scroll end"> 
+                     <a href="#pencilTarget"><i id="pencilFeel" class="fa fa-paint-brush fa-4x" aria-hidden="true"></i><div id="textPencil">Applications</div></a> 
 
-                <!-- </div> -->
+                 </div> 
 
-            <!-- </div> -->
+             </div> 
             <!-- END icon row -->
 
             <!-- START SWAP responsive icons -->
-<div class="social-links">
+<!-- <div class="social-links">
   <div class="row">
     <div class="small-6 medium-3 columns text-center mobile-stack page-scroll">
       <a href="#selfieTarget"><i class="fa fa-id-card fa-4x" aria-hidden="true"></i>Resume</a>
     </div>
     <div class="small-6 medium-3 columns text-center mobile-stack page-scroll end">
-      <a href="#pencilTarget"><i class="fa fa-paint-brush fa-4x" aria-hidden="true"></i>Applications</a>
+      <a href="#pencilTarget"><i class="fa fa-paint-brush fa-4x" aria-hidden="true"></i>Applications</a> -->
       <!-- <a href="#pencilTarget"><i id="pencilFeel" class="fa fa-paint-brush fa-4x" aria-hidden="true"></i><div id="textPencil">Applications</div></a> -->
-    </div>
+    <!-- </div>
 
   </div>
-</div>
+</div> -->
 
             <!-- END SWAP responsive icons  -->
 
@@ -351,7 +351,7 @@
     <h3>Things Fall <strike>Apart</strike>&nbsp;Together</h3>
      <h4 style="color:grey; font-style:italic">Finding alignment on a groggy a.m.</h4>
     <p class="date">Aug. 22, 2017</p>
-    <p class="baseTxt">&nbsp<span aria-hidden="true" class="fa fa-clock-o  witness" style="color: #FF4136;"></span> 4-min. read  </p>
+    <p class="baseTxt"><span aria-hidden="true" class="fa fa-clock-o  witness" style="color: #FF4136;"></span> 4-min. read  </p>
     <img src="css/images/famSky.jpg" style="border-radius: 10px">
     <br><br>
     <p>BY LESLIE MOSES &nbsp;<span aria-hidden="true" class="fa fa-pencil fa-lg witness" style="color: #FF4136;"></span></p>
