--- a/index.html
+++ b/index.html
@@ -344,17 +344,20 @@
                                 <br>
                                 
 <hr style="color:#FF4136">
-
+<div class="blogTitle">finding<span class="blogTitle2"> H O P E </span></div>
+<br>
+ <p>&nbsp;&nbsp;<span aria-hidden="true" class="fa fa-circle  witness" style="color: #FF4136;"></span> BY LESLIE MOSES</p>
+<hr>
 <!-- START TRY  responsive blog -->
 <div class="responsive-blog-post">
   <div class="individual-post">
     <h3>Things Fall <strike>Apart</strike>&nbsp;Together</h3>
+    <p class="baseTxt"><span aria-hidden="true" class="fa fa-clock-o  witness" style="color: #FF4136;"></span> 4-min. read  </p>
      <h4 style="color:grey; font-style:italic">Finding alignment on a groggy a.m.</h4>
     <p class="date">Aug. 22, 2017</p>
-    <p class="baseTxt"><span aria-hidden="true" class="fa fa-clock-o  witness" style="color: #FF4136;"></span> 4-min. read  </p>
     <img src="css/images/famSky.jpg" style="border-radius: 10px">
     <br><br>
-    <p>BY LESLIE MOSES &nbsp;<span aria-hidden="true" class="fa fa-pencil fa-lg witness" style="color: #FF4136;"></span></p>
+   
     <p> In a world where things notoriously fall apart, sometimes you can get up early, trust a meteorologist and see things align beautifully, namely the sun and moon and a trip to my old home in South Carolina.</p> 
 <p> A year ago, my Uncle Randy, a meteorologist in Florida, prepared for the Aug. 21 eclipse that I knew nothing about. </p>
 <p>When I arrived groggy and ready to go on Monday at 7:30 a.m., he had plenty of square paper glasses, scientific internet sites and plans A, B, and, if need be, several Cs ready. </p>
@@ -385,8 +388,8 @@
 <p>The afternoon sky looked more like 7 p.m., prompting pre-mature glows from streetlights. It didn’t feel like evening, though. </p>
 <p>It felt like a good kind of eerie with us all standing out there, soon cheering when the thinning thumbnail was all but covered by the moon. </p>
 <p>And then it happened. </p>
-<p> “Holy shit! That’s the corona!” yelled Randy. </p>
-<p>The sun brought out her best, and shone with her holy blazing skirt. Randy said we could take off our glasses. </p>
+<p>“Holy shit! That’s the corona!” yelled Randy. </p>
+<p>The sun saved her best for the masses, and shone in her holy blazing skirt that I never saw coming. Randy said we could take off our glasses. </p>
 <p>What we saw was only for the bare, cardboard-framed eye; it was prohibited to cameras. </p>
 <p>No video on television showed what I saw. Not even close. </p>
 <p>Randy said not to tell others that what photos showed didn’t compare to what we saw live, but I’m going to say it. </p>
