--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
 <!-- Off-canvas content -->
                             <div class="yearHeader">
                                 
-                                <button type="button" id="yearButton" data-toggle="offCanvasBottom1"><span style="color:#666"><i class="fa fa-smile-o lg" aria-hidden="true"></i></span></button>
+                                <button type="button" id="yearButton" data-toggle="offCanvasBottom1">&nbsp;&nbsp;&nbsp;&nbsp;<i class="fa fa-smile-o lg" aria-hidden="true"></i></button>
                                 <br>
                                 <br>
                                 <br>
