--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
                     <div class="large-3 columns">
                         <div class="portfolio-resume-wrapper">
-                            <img class="portfolio-resume-headshot" src="css/images/leslieBear.jpg" alt="Moses">
+                            <img class="portfolio-resume-headshot" src="css/images/leslieandtree.jpg" alt="Moses">
 
                             <br>
                             <br>
