Bottom drawer cut

--- a/cutCode.html
+++ b/cutCode.html
@@ -5,6 +5,45 @@ Available Fonts:
     font-family: 'Passion One', cursive;
 
 
+    <!--START bottom canvas -->
+  <!--  BOTTOM OFF-CANVAS -->
+                <div class="page">
+                    <div class="off-canvas-wrapper">
+                        <div class="off-canvas position-bottom" id="offCanvasBottom1" data-off-canvas>
+
+                            <!-- Off-canvas content -->
+                            <div class="yearHeader">
+
+                                <button type="button" id="yearButton" data-toggle="offCanvasBottom1">&nbsp;&nbsp;&nbsp;&nbsp;<i class="fa fa-smile-o lg" aria-hidden="true"></i></button>
+                                <br>
+                                <br>
+                                <br>
+                                <br>
+
+
+
+                                <div id="yearInColorHead">
+                                    Thanks for Visiting</span><span style="color:#FF4136">!</span>
+                                    <br>
+                                    <div class="smile"><img src="css/images/smile.jpg" alt="Moses"> <br>
+                                        <br></div>
+                                </div>
+                                </ul>
+
+
+                                <!-- curley bracket introducing year in color -->
+
+                            </div>
+                            <div class="off-canvas-content" data-off-canvas-content>
+
+                                <!-- <img src="css/images/zzkmki0yh6i-anna-popovic.jpg" class="" height="50" width="" alt=""> -->
+                            </div>
+                        </div>
+                        <!-- </div> -->
+                    </div>
+    <!-- END bottom canvas -->
+
+
 
                     <li><span class="monthy" style="color:#13b4ff">J</span></li>
                     <li id="jan1">1<img src="css/images/zzkmki0yh6i-anna-popovic.jpg" class="" height="250" width="" alt=""> </li>
