portfolio side wrappers edited down

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                         <div class="portfolio-resume-wrapper">
                             <img class="portfolio-resume-headshot" src="css/images/leslieandtree.jpg" alt="Moses">
 
-                            <br>
+                            
                             <br>
                             <!-- EDUCATION section -->
                             <h3 class="portfolio-resume-header">EDUCATION</h3>
@@ -164,8 +164,6 @@
 
                     </div>
 
-
-
                     <div class="large-3 columns end">
                         <div class="portfolio-resume-wrapper">
                             <h3 class="portfolio-resume-header">Awards</h3>
@@ -238,13 +236,12 @@
                         <span class="image-hover-wrapper-banner page-scroll"><span class="hideDescribe"><span style="font-family: 'Pacifico', cursive; font-size: 40px; color: floralwhite;">Buy</span>
                         <span
                             style="color:black">&nbsp;or</span><br><span style="font-family: 'Audiowide', cursive; font-size: 36px; color:black">Buck</span>
-                            <br>
-                            <br>
-                            <span class="bold">APP</span></span>
-                            <br> <span class="smText">Gives designers feedback through users’ opinions
+                            <hr>
+                            </span>
+                            <span class="smText">Gives designers feedback through users’ opinions
                         <br>
                         <br>
-                        <span class="bold">ROLE </span>
+                        <span class="bold">MY ROLE </span>
                             <br> Designer</span><span class="hideDescribe">
                         <br>
                         <br>
@@ -270,13 +267,11 @@
                     <div id="doin" class="image-hover-wrapper small-11 columns panel" data-equalizer-watch>
                         <span class="image-hover-wrapper-banner page-scroll"><span class="hideDescribe"><span style="font-family:'Lobster', cursive; font-size: 37px; line-height: .2em ;color:white">How <span style="color:#FF4136">You</span>                        Doin&rsquo;?</span>
                         </span>
+                        <hr>
+                       Tracks how teens feel daily through selfies and text analysis
                         <br>
                         <br>
-                        <span class="bold">APP</span>
-                        <br> Tracks how teens feel daily through selfies and text analysis
-                        <br>
-                        <br>
-                        <span class="bold">ROLE </span>
+                        <span class="bold">MY ROLE </span>
                         <br> Designer
                         <br>
                         <br>
@@ -301,13 +296,10 @@
                     <!-- START YOU GOT THIS SAMPLE-->
                     <div id="got" class="image-hover-wrapper small-11 columns panel end page-scroll" data-equalizer-watch>
                         <span class="image-hover-wrapper-banner "> <span  style="font-size:30px ; font-family: 'Bungee Shade', cursive;">You Got This</span>
+                        <hr>Helps girls who are hopeless take the next step through stories
                         <br>
                         <br>
-                        <span class="bold">APP</span>
-                        <br> Helps girls who are hopeless take the next step through stories
-                        <br>
-                        <br>
-                        <span class="bold">ROLE </span>
+                        <span class="bold">MY ROLE </span>
                         <br> Developer, Designer
                         <br>
                         <br>
