--- a/index.html
+++ b/index.html
@@ -92,26 +92,24 @@
                             
                             <br>
                             <!-- EDUCATION section -->
-                            <h3 class="portfolio-resume-header">EDUCATION</h3>
+                            <h3 class="portfolio-resume-header"><i class="fa fa-graduation-cap" style="color:white" aria-hidden="true"></i> EDUCATION</h3>
                             <span class="boldRezHed">Ga. Tech Professional Edu.</span> &nbsp;&nbsp;&nbsp;
-                            <br><i class="fa fa-graduation-cap" aria-hidden="true"></i><span style="font-size:14px"> July '17</span>                            <br>
+                          &nbsp;&nbsp;&nbsp;<i class="fa fa-graduation-cap" aria-hidden="true"></i><span style="font-size:14px"> July '17</span>                            <br>
                             <span class="rezSubHed">Full Stack Web Development Bootcamp</span>
                             <br>
                             <span class="rezDetails">Intensive, 24-week bootcamp to understand, design and build web applications</span>
                             <br>
                             <br>
 
-                            <span class="boldRezHed">Armstrong State University</span> &nbsp;&nbsp;
+                            <span class="boldRezHed">Armstrong State Univ.</span> &nbsp;&nbsp;<i class="fa fa-graduation-cap" aria-hidden="true"></i><span style="font-size:14px"> Dec. '06</span><br>
 
-                            <br><i class="fa fa-graduation-cap" aria-hidden="true"></i><span style="font-size:14px"> Dec. '06</span><br>
-                            <span class="rezSubHed">B.A. English Communications</span>
                             <br>
-                            <ul>
+                            <span class="rezSubHed">B.A. English Comm.</span>
+                            <br>
 
-                                <li><span class="bullet"> &bull;</span> Cum laude </li><br>
-                                <li><span class="bullet"> &bull;</span> President’s list</li><br>
-                                <li><span class="bullet"> &bull;</span> Dean's list</li>
-                            </ul>
+                                &bull;  Cum laude  <br>
+                                &bull;  President’s list <br>
+                                &bull;  Dean's list <br><br>
                             <span style="font-weight:bolder">Honor Societies</span><br>
 
                             <span class="bullet"> &bull;</span> Sigma Tau Delta (English)<br>
@@ -122,38 +120,38 @@
 
                     <div class="large-3 columns">
                         <div class="portfolio-resume-wrapper">
-                            <h3 class="portfolio-resume-header">development | Design</h3>
+                            <h3 class="portfolio-resume-header"><i class="fa fa-paint-brush" aria-hidden="true"></i> Design + Development </h3>
                             <div class="portfolio-resume-spacing">
                                 <!-- APPS Developed LIST -->
-                                <h5><strong>Applications Developed:</strong></h5>
-                                <h6>Click or scroll down</h6>
+                                <h5><strong>Apps Developed:</strong></h5>
+                                <h6>(Click or scroll down)</h6>
 
                                 <!-- BUY OR BUCK NAME -->
                                 <a href="#buck">
-                                 <span class="bullet"> &bull;</span> <span class="page-scroll" style="font-family: 'Pacifico', cursive; font-size: 37px; color: black;">Buy</span><span style="color:black">&nbsp;or</span><span style="font-family: 'Audiowide', cursive; font-size: 30px; color:black">Buck</span> 
+                                 <span class="bullet"> &bull;</span> <span class="page-scroll" style="font-family: 'Pacifico', cursive; font-size: 27px; color: black;">Buy</span><span style="color:black">&nbsp;or </span><span style="font-family: 'Audiowide', cursive; font-size: 23px; color:black">Buck</span> 
                                 </a>
                                 <br>
                                 <br>
                                 <!-- HOW YOU DOIN NAME -->
                                 <a href="#doin"> 
-                                  <span class="bullet"> &bull;</span> <span class="page-scroll" style="font-family:'Lobster', cursive; font-size: 37px ;color:black">How <span style="color:black">You</span>Doin&rsquo;?</span>
+                                  <span class="bullet"> &bull;</span> <span class="page-scroll" style="font-family:'Lobster', cursive; font-size: 27px ;color:black">How <span style="color:black">You</span> Doin&rsquo;? </span>
                                 </a>
                                 <br>
                                 <br>
                                 <!-- YOU GOT THIS NAME -->
                                 <a href="#got"> 
-                                  <span class="bullet"> &bull;</span> <span class="page-scroll" style="font-size:25px ; font-family: 'Bungee Shade', cursive; font-weight:bold; color:black">You Got This</span></a>
+                                  <span class="bullet"> &bull;</span> <span class="page-scroll" style="font-size:20px ; font-family: 'Bungee Shade', cursive; font-weight:bold; color:black">You Got This</span></a>
                                 <br>
-                                <br><br>
-                                <h5><strong>Experience with:</strong></h5>
+                                <br> 
+                                <h5><strong>Development with:</strong></h5>
                                 <p>Responsive design, HTML5, CSS3, JavaScript, JQuery, Bootstrap, Foundation, Firebase, Node,
                                     MySQL, MongoDB, JSX, Express, Handlebars and React </p>
 
 
                             </div>
                             <div class="portfolio-resume-spacing">
-                                <h5><strong>Design Work:</strong></h5>
-                                <p>Typography, InDesign, publication design, some graphic design, QuarkXPress</p>
+                                <h5><strong>Design Experience:</strong></h5>
+                                <p>Typography, InDesign, publication design, QuarkXPress</p>
                                 <span class="bullet"> &bull;</span> Special sections (e.g. glossy wedding guide)<br>
                                 <span class="bullet"> &bull;</span> Children’s prayer booklet | 6,000 copies sent nationally
                                 <br>
@@ -166,7 +164,7 @@
 
                     <div class="large-3 columns end">
                         <div class="portfolio-resume-wrapper">
-                            <h3 class="portfolio-resume-header">Awards</h3>
+                            <h3 class="portfolio-resume-header"><i class="fa fa-trophy" aria-hidden="true"></i> Awards</h3>
                             <h5><strong>Georgia Press Association</strong></h5>
                             <span class="bullet"> &bull;</span> <a style="color:black" target="_blank" href="http://savannahnow.com/news/2017-06-02/savannah-morning-news-named-best-newspaper-georgia">1st place | 2017 Religion Writing</a><br>
                             <span class="bullet"> &bull;</span> <a style="color:black" target="_blank" href="http://savannahnow.com/news/2017-06-02/savannah-morning-news-named-best-newspaper-georgia"> 2nd place | 2017 Feature Writing </a>                            <br>
@@ -174,14 +172,20 @@
                             <h5><strong>S.C. Press Association</strong></h5>
                             <span class="bullet"> &bull;</span> 3rd place | 2010 Article Series <br>
                             <span class="bullet"> &bull;</span> <a style="color:black" target="_blank" href="http://usatoday30.usatoday.com/news/nation/states/southcarolina/2009-03-14-3056404411_x.htm"> 1st place | 2009 Lifestyle Feature Writing </a>                            <br><br>
-                            <h5><strong>Armstrong State University</strong></h5>
+                            <h5><strong>Armstrong State Univ.</strong></h5>
                             <span style="font-weight:bold"> Outstanding Staff Writer </span> | The Inkwell 2005 <br><br><br>
+
+                        <h3 class="portfolio-resume-header"><i class="fa fa-user" aria-hidden="true"></i> Bio</h3>
+
+                            &nbsp;&nbsp;Leslie grew up in Savannah, Ga., and spent the last decade in print journalism. <br><br>
+&nbsp;&nbsp;Creative with an eye for design and coding skills, she hopes to herald more good news across the land. 
+
 
                             <!-- <div class="portfolio-resume-contact-info">
 
                                 <a href="tel:+19126568462"><i class="fa fa-id-card" aria-hidden="true"></i>Google Docs resume</a><br>
                               </div> -->
-                            <hr>
+                            <br> <br>
                             <!-- SOC MEDIA BTNS -->
                             <div class="rounded-social-buttons">
                                 <a class="social-button linkedin" target="_blank" href="https://www.linkedin.com/in/leslie-moses-045b2b88/"></a>
@@ -317,6 +321,7 @@
                 <!-- rowEND: -->
                 <br>
                 <br>
+            </div>
                 <br>
                 <div class="row">
                     <div class="page-scroll">
