more of something

--- a/cutCode.html
+++ b/cutCode.html
@@ -5,6 +5,25 @@ Available Fonts:
     font-family: 'Passion One', cursive;
 
 
+<!-- START    Grey square socials  -->
+            <div class="social-links">
+                <div class="row">
+                    <div class="small-6 medium-3 columns text-center mobile-stack">
+                        &nbsp;
+                    </div>
+                    <div class="small-6 medium-3 columns text-center mobile-stack"> 
+                         <a  target="_blank" href="https://www.linkedin.com/in/leslie-moses-045b2b88/"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
+         <a target="_blank" href="https://github.com/LeslieMoses"><i class="fa fa-github-square" aria-hidden="true"></i></a>
+      <a target="_blank" href="https://twitter.com/leslieamoses"><i class="fa fa-twitter-square" aria-hidden="true"></i></a>
+
+                    </div>
+                    <div class="small-6 medium-3 columns text-center mobile-stack  "> 
+                    </div>
+                </div>
+            </div>
+<!-- END Grey Sq Socials -->
+
+
     <!--START bottom canvas -->
   <!--  BOTTOM OFF-CANVAS -->
                 <div class="page">
