--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <!-- Google Fonts link -->
     <link href="https://fonts.googleapis.com/css?family=Monofett|Bungee+Shade|Open+Sans|Open+Sans+Condensed:300|Audiowide|Ranchers|Pacifico|Architects+Daughter|Nova+Mono|Comfortaa|Lobster|Fascinate+Inline|Gloria+Hallelujah|Space+Mono|Jura|Kaushan+Script|Passion+One|Satisfy|Syncopate"
         rel="stylesheet">
+    <!-- Use these stylesheets for icons and typography in head of your HTML doc if you want :) -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet">
 </head>
 
 <body>
@@ -28,7 +30,7 @@
             </div>
             <!-- END callout -->
 
-            <!-- START icon row -->
+            <!-- START socials row -->
             <div class="row">
 
                 <div class="large-4 columns page-scroll">
@@ -42,21 +44,20 @@
                 </div>
 
             </div>
-            <!-- END icon row -->
+            <!-- END socials row -->
+                           <div class="row">
+                               <div class="rounded-social-buttons">
+                                <a class="social-buttonHomePg linkedin" target="_blank" href="https://www.linkedin.com/in/leslie-moses-045b2b88/"></a>
+                                <a class="social-buttonHomePg github" target="_blank" href="https://github.com/LeslieMoses"></a>
+                                <a class="social-buttonHomePg twitter" target="_blank" href="https://twitter.com/leslieamoses"></a>
+                            </div>
+                            </div>
 
-            <!-- START SWAP responsive icons -->
-            <!-- <div class="social-links">
-  <div class="row">
-    <div class="small-6 medium-3 columns text-center mobile-stack page-scroll">
-      <a href="#selfieTarget"><i class="fa fa-id-card fa-4x" aria-hidden="true"></i>Resume</a>
-    </div>
-    <div class="small-6 medium-3 columns text-center mobile-stack page-scroll end">
-      <a href="#pencilTarget"><i class="fa fa-paint-brush fa-4x" aria-hidden="true"></i>Applications</a> -->
-            <!-- <a href="#pencilTarget"><i id="pencilFeel" class="fa fa-paint-brush fa-4x" aria-hidden="true"></i><div id="textPencil">Applications</div></a> -->
-            <!-- </div>
+            <!-- Start of body below -->
 
-  </div>
-</div> -->
+            <br>
+            <br>
+
 
             <!-- END SWAP responsive icons  -->
 
@@ -87,29 +88,36 @@
 
                     <div class="large-3 columns">
                         <div class="portfolio-resume-wrapper">
-                            <img class="portfolio-resume-headshot" src="css/images/leslieandtree.jpg" alt="Moses">
+                            <!-- SOC MEDIA BTNS -->
+                            <div class="rounded-social-buttons">
+                                <a class="social-button linkedin" target="_blank" href="https://www.linkedin.com/in/leslie-moses-045b2b88/"></a>
+                                <a class="social-button github" target="_blank" href="https://github.com/LeslieMoses"></a>
+                                <a class="social-button twitter" target="_blank" href="https://twitter.com/leslieamoses"></a>
+                            </div><br>
+                            <div class="portfolio-resume-contact-info">
+                                <a href="mailto:lesmoses@gmail.com?Subject=Hi%20Leslie" target="_top"><i class="fa fa-envelope" aria-hidden="true"></i>lesmoses@gmail.com</a>
+                            </div>
+                            <div class="portfolio-resume-contact-info">
+                                <a href="tel:+19126568462"><i class="fa fa-phone" aria-hidden="true"></i>912-656-8462</a><br>
 
-                            
+                            </div><img class="portfolio-resume-headshot" src="css/images/leslieandtree.jpg" alt="Moses">
                             <br>
                             <!-- EDUCATION section -->
                             <h3 class="portfolio-resume-header"><i class="fa fa-graduation-cap" style="color:white" aria-hidden="true"></i> EDUCATION</h3>
-                            <span class="boldRezHed">Ga. Tech Professional Edu.</span> &nbsp;&nbsp;&nbsp;
-                          &nbsp;&nbsp;&nbsp;<i class="fa fa-graduation-cap" aria-hidden="true"></i><span style="font-size:14px"> July '17</span>                            <br>
+                            <span class="boldRezHed">Ga. Tech Professional Edu.</span> &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
+                            <i class="fa fa-graduation-cap" aria-hidden="true"></i><span style="font-size:14px"> July '17</span>                            <br>
                             <span class="rezSubHed">Full Stack Web Development Bootcamp</span>
                             <br>
                             <span class="rezDetails">Intensive, 24-week bootcamp to understand, design and build web applications</span>
                             <br>
                             <br>
 
-                            <span class="boldRezHed">Armstrong State Univ.</span> &nbsp;&nbsp;<i class="fa fa-graduation-cap" aria-hidden="true"></i><span style="font-size:14px"> Dec. '06</span><br>
+                            <span class="boldRezHed">Armstrong State Univ.</span> &nbsp;&nbsp;<i class="fa fa-graduation-cap"
+                                aria-hidden="true"></i><span style="font-size:14px"> Dec. '06</span><br>
 
                             <br>
                             <span class="rezSubHed">B.A. English Comm.</span>
-                            <br>
-
-                                &bull;  Cum laude  <br>
-                                &bull;  President’s list <br>
-                                &bull;  Dean's list <br><br>
+                            <br> &bull; Cum laude <br> &bull; President’s list <br> &bull; Dean's list <br><br>
                             <span style="font-weight:bolder">Honor Societies</span><br>
 
                             <span class="bullet"> &bull;</span> Sigma Tau Delta (English)<br>
@@ -142,7 +150,7 @@
                                 <a href="#got"> 
                                   <span class="bullet"> &bull;</span> <span class="page-scroll" style="font-size:20px ; font-family: 'Bungee Shade', cursive; font-weight:bold; color:black">You Got This</span></a>
                                 <br>
-                                <br> 
+                                <br>
                                 <h5><strong>Development with:</strong></h5>
                                 <p>Responsive design, HTML5, CSS3, JavaScript, JQuery, Bootstrap, Foundation, Firebase, Node,
                                     MySQL, MongoDB, JSX, Express, Handlebars and React </p>
@@ -175,33 +183,17 @@
                             <h5><strong>Armstrong State Univ.</strong></h5>
                             <span style="font-weight:bold"> Outstanding Staff Writer </span> | The Inkwell 2005 <br><br><br>
 
-                        <h3 class="portfolio-resume-header"><i class="fa fa-user" aria-hidden="true"></i> Bio</h3>
+                            <h3 class="portfolio-resume-header"><i class="fa fa-user" aria-hidden="true"></i> Bio</h3>
 
-                            &nbsp;&nbsp;Leslie grew up in Savannah, Ga., and spent the last decade in print journalism. <br><br>
-&nbsp;&nbsp;Creative with an eye for design and coding skills, she hopes to herald more good news across the land. 
+                            &nbsp;&nbsp;Leslie grew up in Savannah, Ga., and spent the last decade in print journalism. <br><br>                            &nbsp;&nbsp;She is creative with an eye for design and coding skills, and thus hopes to herald
+                            more good news across the land.
 
 
                             <!-- <div class="portfolio-resume-contact-info">
 
                                 <a href="tel:+19126568462"><i class="fa fa-id-card" aria-hidden="true"></i>Google Docs resume</a><br>
                               </div> -->
-                            <br> <br>
-                            <!-- SOC MEDIA BTNS -->
-                            <div class="rounded-social-buttons">
-                                <a class="social-button linkedin" target="_blank" href="https://www.linkedin.com/in/leslie-moses-045b2b88/"></a>
-                                <a class="social-button github" target="_blank" href="https://github.com/LeslieMoses"></a>
-                                <a class="social-button twitter" target="_blank" href="https://twitter.com/leslieamoses"></a>
-                            </div><br>
-                            <div class="portfolio-resume-contact-info">
-                                <a href="mailto:lesmoses@gmail.com?Subject=Hi%20Leslie" target="_top"><i class="fa fa-envelope" aria-hidden="true"></i>lesmoses@gmail.com</a>
-                            </div>
-                            <div class="portfolio-resume-contact-info">
-                                <a href="tel:+19126568462"><i class="fa fa-phone" aria-hidden="true"></i>912-656-8462</a><br>
-
-                                <br>
-                                <br>
-
-                            </div>
+                            <br>
                         </div>
                     </div>
 
@@ -230,7 +222,7 @@
                 <div id="pencilTarget" class="page-scroll">
 
 
-                    <h2><span class="devHed">development + </span><br><span class="designHed">d e s i g n </span></h2>
+                    <h2><br><span class="designHed">d e s i g n</span><br><span class="devHed">work&nbsp;</span></h2>
                     <br>
                     <br>
                     <br>
@@ -238,22 +230,21 @@
                     <!-- START BUY OR BUCK SAMPLE -->
                     <div id="buck" class="image-hover-wrapper small-11 columns panel" data-equalizer-watch>
                         <span class="image-hover-wrapper-banner page-scroll"><span class="hideDescribe"><span style="font-family: 'Pacifico', cursive; font-size: 40px; color: floralwhite;">Buy</span>
-                        <span
-                            style="color:black">&nbsp;or</span><br><span style="font-family: 'Audiowide', cursive; font-size: 36px; color:black">Buck</span>
-                            <hr>
-                            </span>
-                            <span class="smText">Gives designers feedback through users’ opinions
+                        <span style="color:black">&nbsp;or</span><br><span style="font-family: 'Audiowide', cursive; font-size: 36px; color:black">Buck</span>
+                        <hr>
+                        </span>
+                        <span class="smText">Gives designers feedback through users’ opinions
                         <br>
                         <br>
                         <span class="bold">MY ROLE </span>
-                            <br> Designer</span><span class="hideDescribe">
+                        <br> Designer</span><span class="hideDescribe">
                         <br>
                         <br>
                         <span class="bold ">TOOLS</span>
-                            <br> HTML, CSS, Google Font, Font Awesome, Foundation, responsive design</span>
+                        <br> HTML, CSS, Google Font, Font Awesome, Foundation, responsive design</span>
 
-                            </span>
-                            <a target="_blank" href="http://vast-bastion-21748.herokuapp.com/"><img class="webImage" src="css/images/bucky.png">
+                        </span>
+                        <a target="_blank" href="http://vast-bastion-21748.herokuapp.com/"><img class="webImage" src="css/images/bucky.png">
                             <span class="image-hover-wrapper-reveal">
       <p class="visitLink">Visit <i class="fa fa-share" aria-hidden="true"></i><br><span class="hideDescribe"><span style="font-family: 'Pacifico', cursive; font-size: 40px; color: #ff5733;">Buy</span><span style="color:black">or</span><span style="font-family: 'Audiowide', cursive; font-size: 36px; color:black">Buck</span></span>
 
@@ -271,8 +262,7 @@
                     <div id="doin" class="image-hover-wrapper small-11 columns panel" data-equalizer-watch>
                         <span class="image-hover-wrapper-banner page-scroll"><span class="hideDescribe"><span style="font-family:'Lobster', cursive; font-size: 37px; line-height: .2em ;color:white">How <span style="color:#FF4136">You</span>                        Doin&rsquo;?</span>
                         </span>
-                        <hr>
-                       Tracks how teens feel daily through selfies and text analysis
+                        <hr> Tracks how teens feel daily through selfies and text analysis
                         <br>
                         <br>
                         <span class="bold">MY ROLE </span>
@@ -322,32 +312,32 @@
                 <br>
                 <br>
             </div>
-                <br>
-                <div class="row">
-                    <div class="page-scroll">
-                        <a href="#topRow">
+            <br>
+            <div class="row">
+                <div class="page-scroll">
+                    <a href="#topRow">
                             <button id="backTop">Top ^ </button>
                         </a>
-                          <br>
-                                <br>
-                                <br>
-                    </div>
+                    <br>
+                    <br>
+                    <br>
                 </div>
+            </div>
 
 
-              
 
-                    <!-- end of main row that includes form -->
 
-                    <script src="js/vendor/jquery.js"></script>
-                    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
-                    <script src="js/vendor/what-input.js"></script>
-                    <script src="js/vendor/foundation.js"></script>
-                    <script src="js/app.js"></script>
-                    <script src="js/text-color.js"></script>
-                    <script src="js/buttonAppend.js"></script>
+            <!-- end of main row that includes form -->
 
-                    <!-- copyright
+            <script src="js/vendor/jquery.js"></script>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+            <script src="js/vendor/what-input.js"></script>
+            <script src="js/vendor/foundation.js"></script>
+            <script src="js/app.js"></script>
+            <script src="js/text-color.js"></script>
+            <script src="js/buttonAppend.js"></script>
+
+            <!-- copyright
     © 2017 SpotlessFlies -->
 </body>
 
